--- a/Project/views/admin/add-products.ejs
+++ b/Project/views/admin/add-products.ejs
@@ -1,30 +1,38 @@
 <%-include('header')-%>
+<%-include('../partials/sidebarAdmin.ejs')%>
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="page-title-box">
+                    <h4 class="page-title">Add Offers</h4>
+                </div>
+            </div>
+        </div>
 
     <div class="container">
         <div class="col-sm-6 col-sm-offset-3">
 
-            <h1>Add Product</h1>
+            
             <!-- LOGIN FORM -->
             <form action="/admin/add-product" method="post" enctype="multipart/form-data">
                 <div class="form-group">
-                    <label class="fs-4">Name</label>
-                    <input type="text" class="form-control fs-4" name="name">
+                    <label >Name</label>
+                    <input type="text" class="form-control " name="name">
                 </div>
 
                 <div class="form-group">
-                    <label class="fs-4">Description</label>
-                    <input type="text" class="form-control fs-4" name="description">
+                    <label >Description</label>
+                    <input type="text" class="form-control " name="description">
                 </div>
 
                 <div class="form-group">
-                    <label class="fs-4">Price</label>
-                    <input type="text" class="form-control fs-4" name="price">
+                    <label >Price</label>
+                    <input type="text" class="form-control " name="price">
                 </div>
                 <!-- Example single danger button -->
 
-                <label for="cars" class="fs-4">Category:</label>
+                <label for="cars" >Category:</label>
                 <br><br>
-                <select class="form-select form-select-lg mb-3" name="category">
+                <select class="form-select form-select mb-3" name="category">
                     <%categories.forEach((element)=>{%>
                         <option value="<%=element.name%>">
                             <%=element.name%>
@@ -34,17 +42,11 @@
                 <br><br>
                 <div class="form-group">
                     <label for="">Image</label>
-                    <input type="file" class="form-control fs-4 " name="image">
+                    <input type="file" class="form-control " name="image">
                 </div>
                 <div class="form-group">
-                    <input type="file" class="form-control fs-4 " name="images">
+                    <input type="file" class="form-control" name="images">
                 </div>
-                <!-- <div class="form-group">
-                    <input type="file" class="form-control fs-4 " name="imagess">
-                </div>
-                <div class="form-group">
-                    <input type="file" class="form-control fs-4 " name="imagesss">
-                </div> -->
 
                 <label for="name"></label><br>
 
@@ -75,7 +77,7 @@
 
                 <input type="file" name="imagesss" class="form-control" onchange="changeImg2(event)" id="id_image2"><br>
 
-                <button type="submit" class="btn btn-warning btn-lg fs-4">Add Product</button>
+                <button type="submit" class="btn btn-warning btn">Add Product</button>
 
 
             </form>
@@ -83,8 +85,11 @@
             <hr>
         </div>
     </div>
+    </div>  
 
     <script>
+        var el = document.getElementById("wrapper");
+        var toggleButton = document.getElementById("menu-toggle");
 
         function changeImg(event) {
             // .src = URL.createObjectURL(event.target.files[0])
