--- a/Project/views/admin/dashboard.ejs
+++ b/Project/views/admin/dashboard.ejs
@@ -1,63 +1,91 @@
+
 <%-include('header')-%>
 
 
-    <div class="d-flex" id="wrapper">
-        <!-- Sidebar -->
-        <div class="bg-white" id="sidebar-wrapper">
-            <div class="sidebar-heading text-center py-4 primary-text fs-4 fw-bold text-uppercase border-bottom"><i
-                    class="fas fa-user-secret me-2"></i>goCycle</div>
-            <div class="list-group list-group-flush my-3">
-                <a href="dashboard"
-                    class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Dashboard</a>
-                <a href="productmanagement"
-                    class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Products</a>
-                <a href="category"
-                    class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Category</a>
-                <a href="userMangement"
-                    class="list-group-item list-group-item-action bg-transparent second-text fw-bold">User mangement</a>
-                <a href="bannermangement"
-                    class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Banner
-                    mangement</a>
-                <a href="orderMangement"
-                    class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Order
-                    management</a>
-                <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Add
-                    coupons</a>
-                <a href="add-offers" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">Add offers</a>
-                <a href="logout"
-                    class="list-group-item list-group-item-action bg-transparent text-danger fw-bold">Logout</a>
-            </div>
-        </div>
-        <!-- /#sidebar-wrapper -->
+    <%-include('../partials/sidebarAdmin.ejs')%>
+    
 
-        <!-- Page Content -->
-        <div id="page-content-wrapper">
-            <nav class="navbar navbar-expand-lg navbar-light bg-transparent py-4 px-4">
-                <div class="d-flex align-items-center">
-                    <i class="fas fa-align-left primary-text fs-4 me-3" id="menu-toggle"></i>
-                    <h2 class="fs-2 m-0">Dashboard</h2>
+            <!-- boxes -->
+            <div class="container-fluid">
+                <!-- Content Row -->
+                <div class="row">
+
+                    <!-- Earnings (Monthly) Card Example -->
+                    <div class="col-xl-3 col-md-6 mb-4">
+                        <div class="card border-left-primary shadow h-100 py-2">
+                            <div class="card-body">
+                                <div class="row no-gutters align-items-center">
+                                    <div class="col mr-2">
+                                        <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                                            Earnings (Monthly)</div>
+                                        <div class="h5 mb-0 font-weight-bold text-gray-800">$40,000</div>
+                                    </div>
+                                    
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Earnings (Monthly) Card Example -->
+                    <div class="col-xl-3 col-md-6 mb-4">
+                        <div class="card border-left-success shadow h-100 py-2">
+                            <div class="card-body">
+                                <div class="row no-gutters align-items-center">
+                                    <div class="col mr-2">
+                                        <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+                                            Earnings (Annual)</div>
+                                        <div class="h5 mb-0 font-weight-bold text-gray-800">$215,000</div>
+                                    </div>
+                                   
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Earnings (Monthly) Card Example -->
+                    <div class="col-xl-3 col-md-6 mb-4">
+                        <div class="card border-left-info shadow h-100 py-2">
+                            <div class="card-body">
+                                <div class="row no-gutters align-items-center">
+                                    <div class="col mr-2">
+                                        <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Total customers
+                                        </div>
+                                        <div class="row no-gutters align-items-center">
+                                            <div class="col-auto">
+                                                <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">50%</div>
+                                            </div>
+                                            <div class="col">
+                                                <div class="progress progress-sm mr-2">
+                                                    <div class="progress-bar bg-info" role="progressbar"
+                                                        style="width: 50%" aria-valuenow="50" aria-valuemin="0"
+                                                        aria-valuemax="100"></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-auto">
+                                        <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Pending Requests Card Example -->
+                    <div class="col-xl-3 col-md-6 mb-4">
+                        <div class="card border-left-warning shadow h-100 py-2">
+                            <div class="card-body">
+                                <div class="row no-gutters align-items-center">
+                                    <div class="col mr-2">
+                                        <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
+                                            Todays income</div>
+                                        <div class="h5 mb-0 font-weight-bold text-gray-800">18</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle second-text fw-bold" href="#" id="navbarDropdown"
-                                role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                <i class="fas fa-user me-2"></i>Admin
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Logout</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div> -->
-            </nav>
 
             <div class="container-fluid px-4">
                 <div class="row my-5">
@@ -75,51 +103,53 @@
 
                             </tbody>
                         </table>
-                        <div class="row" style="  width: 77rem;">
-                            <div class="col-sm-6 mb-2 col-12 col-lg-6">
-                              <div class="bg-light text-center rounded p-4">
-                                <div class="d-flex align-items-center justify-content-between mb-4">
-                                  <h6 class="mb-0">Daily sales</h6>
-                        
+                        <div class="d-flex align-items-center justify-content-between mb-4" id="content">
+                            <div class="row">
+
+                                <div class="col-sm-12 col-xl-6 col-12 mb-4">
+                                    <div class="bg-light text-center rounded p-4">
+                                        <div class="d-flex align-items-center justify-content-between mb-4">
+                                            <h6 class="mb-0">Daily sales</h6>
+
+                                        </div>
+                                        <canvas id="myChart" width="400" height="400"></canvas>
+                                    </div>
                                 </div>
-                                <canvas id="myChart" width="400" height="400"></canvas>
-                              </div>
+
+                                <div class="col-sm-12 col-xl-6 mb-4 col-12">
+                                    <div class="bg-light text-center rounded p-4">
+                                        <div class="d-flex align-items-center justify-content-between mb-4">
+                                            <h6 class="mb-0">Weekly sales</h6>
+
+                                        </div>
+                                        <canvas id="Chart" width="400" height="400"></canvas>
+                                    </div>
+                                </div>
+
+
+
+                                <div class="col-sm-12 col-xl-6 mb-4 col-12">
+                                    <div class="bg-light text-center rounded p-4">
+                                        <div class="d-flex align-items-center justify-content-between mb-4">
+                                            <h6 class="mb-4">Yearly sales</h6>
+
+                                        </div>
+                                        <canvas id="Chartz" width="400" height="400"></canvas>
+                                    </div>
+                                </div>
+                                <div class="col-sm-12 col-xl-6 mb-4 col-12">
+                                    <div class="bg-light text-center rounded p-4">
+                                        <div class="d-flex align-items-center justify-content-between mb-4">
+                                            <h6 class="mb-4">Category sales</h6>
+
+                                        </div>
+                                        <canvas id="CategoryChartz" width="400" height="400"></canvas>
+                                    </div>
+                                </div>
+
                             </div>
-                        
-                            <div class="col-sm-6 mb-2 col-12 col-lg-6">
-                                <div class="bg-light text-center rounded p-4">
-                                  <div class="d-flex align-items-center justify-content-between mb-4">
-                                    <h6 class="mb-0">Weekly sales</h6>
-                          
-                                  </div>
-                                  <canvas id="Chart"  width="400" height="400"></canvas>
-                                </div>
-                              </div>
-                        
-                            
 
-                            <div class="col-sm-6 mb-2 col-12 col-lg-6">
-                                <div class="bg-light text-center rounded p-4">
-                                  <div class="d-flex align-items-center justify-content-between mb-4">
-                                    <h6 class="mb-4">Yearly sales</h6>
-                          
-                                  </div>
-                                  <canvas id="Chartz" width="400" height="400"></canvas>
-                                </div>
-                              </div>
-                              <div class="col-sm-6 mb-2 col-12 col-lg-6">
-                                <div class="bg-light text-center rounded p-4">
-                                  <div class="d-flex align-items-center justify-content-between mb-4">
-                                    <h6 class="mb-4">Category sales</h6>
-                          
-                                  </div>
-                                  <canvas id="CategoryChartz" width="400" height="400"></canvas>
-                                </div>
-                              </div>
-                            
-
-                            
-                          </div>
+                        </div>
                     </div>
 
                 </div>
@@ -131,6 +161,5 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/static/javascripts/checkout.js"></script>
-
 
     <%-include('footer')-%>
