--- a/Project/views/admin/edit-category.ejs
+++ b/Project/views/admin/edit-category.ejs
@@ -1,5 +1,5 @@
 <%-include('header')-%>
-
+<%-include('../partials/sidebarAdmin.ejs')%>
 <div class="container">
     <div class="col-sm-6 col-sm-offset-3">
     
@@ -22,6 +22,6 @@
         <hr>    
     </div>
     </div>
-
+</div>
     <script src="/static/javascripts/validation.js"></script>
 <%-include('footer')-%>
