--- a/Project/views/admin/edit-product.ejs
+++ b/Project/views/admin/edit-product.ejs
@@ -1,5 +1,5 @@
 <%-include('header')-%>
-
+<%-include('../partials/sidebarAdmin.ejs')%>
 <div class="container">
     <div class="col-sm-6 col-sm-offset-3">
     
@@ -36,6 +36,7 @@
         </form>
     
         <hr>    
+    </div>
     </div>
     </div>
 
