--- a/Project/views/user/header.ejs
+++ b/Project/views/user/header.ejs
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <title></title>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Go Cycle</title>
 
   <!-- sweet alert -->
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -15,7 +17,7 @@
     crossorigin="anonymous" />
   <!-- <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,700,900&display=swap" rel="stylesheet"> -->
 
-  <!-- <script src="https://kit.fontawesome.com/332a215f17.js" crossorigin="anonymous"></script> -->
+  <!-- <script src="https://kit.fontawesome.com/332a215f17.js" crossorigin="anonymous"></script> -->   
   <link rel='stylesheet' href='/static/stylesheets/style.css' />
   <link rel="stylesheet" href="/static/stylesheets/main.css">
   <!-- Font Awesome -->
@@ -36,6 +38,46 @@
 
   <!-- razorpay cdn -->
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+
+  <!-- google sign in -->
+  <meta name="google-signin-client_id" content="225477678393-rbc9qhsd171ljc7p9infql54fnpm63os.apps.googleusercontent.com">
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+
 </head>
 
 <body>
+
+
+  <%-include('../partials/navUser.ejs')-%>
+  <style>
+    .dropdown {
+        position: relative;
+        display: inline-block;
+    }
+
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f1f1f1;
+        min-width: 160px;
+        /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
+        z-index: 1;
+    }
+
+    .dropdown-content a {
+        /* color: black; */
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+
+    .dropdown-content a:hover {
+        background-color: #ddd;
+    }
+
+    .dropdown:hover .dropdown-content {
+        display: block;
+    }
+
+    /* .dropdown:hover .dropbtn {background-color: #3e8e41;} */
+</style>
