--- a/Project/views/user/login.ejs
+++ b/Project/views/user/login.ejs
@@ -1,7 +1,7 @@
 <%-include('header')-%>
 
- <!-- Section: Design Block -->
- <section class="background-radial-gradient overflow-hidden">
+  <!-- Section: Design Block -->
+  <section class="background-radial-gradient overflow-hidden">
     <style>
       .background-radial-gradient {
         background-color: hsl(218, 41%, 15%);
@@ -18,7 +18,7 @@
             hsl(218, 41%, 19%) 80%,
             transparent 100%);
       }
-  
+
       #radius-shape-1 {
         height: 220px;
         width: 220px;
@@ -27,7 +27,7 @@
         background: radial-gradient(#44006b, #ad1fff);
         overflow: hidden;
       }
-  
+
       #radius-shape-2 {
         border-radius: 38% 62% 63% 37% / 70% 33% 67% 30%;
         bottom: -60px;
@@ -37,13 +37,13 @@
         background: radial-gradient(#44006b, #ad1fff);
         overflow: hidden;
       }
-  
+
       .bg-glass {
         background-color: hsla(0, 0%, 100%, 0.9) !important;
         backdrop-filter: saturate(200%) blur(25px);
       }
     </style>
-  
+
     <div class="container px-4 py-5 px-md-5 text-center text-lg-start my-5">
       <div class="row gx-lg-5 align-items-center mb-5">
         <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
@@ -55,32 +55,37 @@
             Make your life easier!
           </p>
         </div>
-  
+
         <div class="col-lg-6 mb-5 mb-lg-0 position-relative">
           <div id="radius-shape-1" class="position-absolute rounded-circle shadow-5-strong"></div>
           <div id="radius-shape-2" class="position-absolute shadow-5-strong"></div>
-  
+
           <div class="card bg-glass">
             <div class="card-body px-4 py-5 px-md-5">
               <form action="/login" method="post" id="signup">
-                
-  
+
+
                 <!-- Email input -->
                 <div class="form-outline mb-4">
                   <input type="email" name="email" id="form3Example3" class="form-control" value="<%=nameval%>" />
-                  <label class="form-label" for="form3Example3" n >Email address</label>
+                  <label class="form-label" for="form3Example3" n>Email address</label>
                 </div>
-                <p id="error-msg" class="fs-6" style="color:rgb(170, 47, 76) "><%=eamilError%></p>
+                <p id="error-msg" class="fs-6" style="color:rgb(170, 47, 76) ">
+                  <%=eamilError%>
+                </p>
 
-  
+
                 <!-- Password input -->
                 <div class="form-outline mb-4">
                   <input type="password" name="password" id="form3Example4" class="form-control" />
                   <label class="form-label" for="form3Example4">Password</label>
                 </div>
-                <p id="error-msg" class="fs-6" style="color:rgb(169, 40, 53) "><%=passwordError%></p>
+                <p id="error-msg" class="fs-6" style="color:rgb(169, 40, 53) ">
+                  <%=passwordError%>
+                </p>
 
-                <div id="emailmsg" class="fs-6" style="color:rgb(158, 44, 19);display:none">Please fill the required</div>
+                <div id="emailmsg" class="fs-6" style="color:rgb(158, 44, 19);display:none">Please fill the required
+                </div>
 
                 <!-- Checkbox -->
                 <div class="form-check d-flex justify-content-center mb-4">
@@ -89,33 +94,28 @@
                     Remember Me!
                   </label>
                 </div>
-  
+
                 <!-- Submit button -->
                 <button type="submit" class="btn btn-primary btn-block mb-4">
                   Login
                 </button>
 
-                
-                
+
+
 
                 <div class="d-flex align-items-center justify-content-center pb-4">
-                <a href = "getOtp" class = "btn btn-primary mt-3">Login with OTP</a>
+                  <a href="getOtp" class="btn btn-primary mt-3">Login with OTP</a>
                 </div>
                 <div class="d-flex align-items-center justify-content-center pb-4">
-                    <p class="mb-0 me-2">Don't have an account?</p>
-                    <a href="signup" class="btn btn-outline-danger">Create new</a>
+                  <p class="mb-0 me-2">Don't have an account?</p>
+                  <a href="signup" class="btn btn-outline-danger">Create new</a>
                 </div>
-  
+
                 <!-- Register buttons -->
-                <div class="text-center">
+                <div class="text-center ">
                   <p>or sign up with:</p>
-                  <button type="button" class="btn btn-link btn-floating mx-1">
-                    <i class="fab fa-facebook-f"></i>
-                  </button>
-  
-                  <button type="button" class="btn btn-link btn-floating mx-1">
-                    <i class="fab fa-google"></i>
-                  </button>
+                  <div class="g-signin2" data-onsuccess="onSignIn"></div>
+                  
                 </div>
               </form>
             </div>
@@ -126,12 +126,30 @@
   </section>
   <!-- Section: Design Block -->
 
+
+
   <!-- MDB -->
-<script
-type="text/javascript"
-src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.4.0/mdb.min.js"
-></script>
-<script src="/static/javascripts/validate.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.4.0/mdb.min.js"></script>
+  <script src="/static/javascripts/validate.js"></script>
+  <!-- <a href="#" onclick="signOut();">Sign out</a> -->
+  <script>
+    function onSignIn(googleUser) {
+      var profile = googleUser.getBasicProfile();
+      console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
+      console.log('Name: ' + profile.getName());
+      console.log('Image URL: ' + profile.getImageUrl());
+      console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
+    }
+  
+
+
+  function signOut() {
+    var auth2 = gapi.auth2.getAuthInstance();
+    auth2.signOut().then(function () {
+      console.log('User signed out.');
+    });
+  }
+</script>
 
 
 
