--- a/Project/views/user/whislist.ejs
+++ b/Project/views/user/whislist.ejs
@@ -1,4 +1,4 @@
-<style>
+< <style>
     .cart-wrap {
         padding: 40px 0;
         font-family: 'Open Sans', sans-serif;
@@ -170,54 +170,9 @@
         font-size: 20px;
         color: #212529;
     }
-</style>
+</style> 
 <%-include('header')-%>
-    <!DOCTYPE html>
-    <html>
-
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Checkout Form</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
-            type="text/css">
-
-
-        <nav class="navbar navbar-expand-lg navbar-light bg-white py-4 fixed-top">
-            <div class="container">
-                <a class="navbar-brand d-flex justify-content-between align-items-center order-lg-0" href="/">
-                    <span class="text-uppercase fw-lighter ms-2">GOCYCLE</span>
-                </a>
-
-                <div class="order-lg-2 nav-btns">
-                    <button type="button" class="btn position-relative">
-                        <i class="fa fa-search"></i>
-                    </button>
-
-                </div>
-
-                <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navMenu">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse order-lg-1" id="navMenu">
-                    <ul class="navbar-nav mx-auto text-center">
-                        <li class="nav-item px-2 py-2">
-                            <a class="nav-link text-uppercase text-dark" href="/">home</a>
-                        </li>
-                        <li class="nav-item px-2 py-2">
-                            <a class="nav-link text-uppercase text-dark" href="#collection">collection</a>
-                        </li>
-                        <li class="nav-item px-2 py-2">
-                            <a class="nav-link text-uppercase text-dark" href="#special">specials</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <!-- end of navbar -->
+    
 
         <div class="cart-wrap">
             <div class="container">
@@ -239,7 +194,7 @@
                                                 <div class="display-flex align-center">
                                                     <div class="img-product">
                                                         <img src="/static/product-image/<%=element.product._id%>.jpg"
-                                                            alt="" class="mCS_img_loaded">
+                                                            alt="" class="mCS_img_loaded" >
                                                     </div>
                                                     <div class="name-product">
                                                         <%=element.product.name%>
