added more stats like total amount of a day

--- a/Project/views/user/oderdetails.ejs
+++ b/Project/views/user/oderdetails.ejs
@@ -1,97 +1,76 @@
 <%-include('header')-%>
+  <div class="container" style="padding-top: 20vh;">
 
-<div class="container-fluid px-4">
-    <div class="row my-5">
-        <h3 class="fs-4 mb-3">Recent Orders</h3>
-
-
-        <div class="col">
-            <table class="table bg-white rounded shadow-sm  table-hover">
-                <thead>
-                    <tr>
-                        <th scope="col" width="50">#</th>
-                        <!-- <th scope="col">Name</th> -->
-                        <!-- <th scope="col">Delivery </th> -->
-                        <th scope="col">Paymentmethod</th>
-                        <!-- <th scope="col">Quantity</th> -->
-                        <th scope="col">Totalamount</th>
-                        <th scope="col">Status</th>
-                        <th scope="col">Date</th>
-                        <th scope="col">option</th>
-
-                        <th scope="col">Option</th>
-
-                        
-                    </tr>
-                </thead>
-                <tbody>
-                    
-                    <%orders.forEach((orders,i)=>{%>
-                        <tr>
-                            <th scope="row">
-                                <%=i+1%>
-                            </th>
-                            
-                            <td>
-                                <%=orders.paymentMethod%>
-                            </td>
-                            <td>
-                                <%=orders.totalAmount%>
-                            </td>
-                            <td>
-                                <%=orders.status%>
-                            </td>
-                            <td>
-                                <%=new Date(orders.date).toDateString()%>
-                            </td>
-                            <!-- <td scope="col"><a href="/product/<%=orders._id%>" class="btn btn-info float-left">View Product</a></td> -->
-                            <td scope="col">
-                                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="viewdetail(`<%=orders._id%>`)">View Details</button>
-                                
-
-                                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                  <div class="modal-dialog">
-                                    <div class="modal-content">
-                                      <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel"> VIEW DETAILS</h5>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                      </div>
-                                      <div class="modal-body">
-                                        <div id="hello">
+    <table id="example6" class="display nowrap" style="width:100%">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Date</th>
+          <th>Detail view</th>
+          <th>Order Cancel</th>
+        </tr>
+      </thead>
+      <tbody>
+        <%orders.forEach((orders,i)=>{%>
+        <tr>
+          <td>
+            <%=orders.paymentMethod%>
+          </td>
+          <td>
+            <%=new Date(orders.date).toDateString()%>
+          </td>
+        </td>
+        <!-- <td scope="col"><a href="/product/<%=orders._id%>" class="btn btn-info float-left">View Product</a></td> -->
+        <td scope="col">
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"
+            onclick="viewdetail(`<%=orders._id%>`)">View Details</button>
 
 
-                                        </div>
-                                      </div>
-                                      <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                      </div>
-                                    </div>
-                                  </div>
-                                </div>
-                            
-                            </td>
-                            <%if(orders.ordercanceled === false){%>
-                            <td scope="col"><button class="btn btn-danger" onclick="confirmDelete('<%=orders._id%>')">Cancel Order</button></td>
-                              <%}else{%>
-                                <td>order cancelled</td>
-                              <%}%>
+          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel"> VIEW DETAILS</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <div id="hello">
 
-                            </tr>
-                        <%})%>
-                </tbody>
-            </table>
-        </div>
-        <h1><%=orders.status%></h1>
-    </div>
-</div>
-  <!-- loader -->
-  <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
-  <!-- <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script> -->
-  
 
+                  </div>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </td>
+          <%if(orders.ordercanceled===false){%>
+            <td scope="col"><button class="btn btn-danger" onclick="confirmDelete('<%=orders._id%>')">Cancel Order</button></td>
+          <%}else{%>
+            <td>order cancelled</td>
+          <%}%>
+        </tr>
+        <%})%>
+      </tbody>
+    </table>
+  </div>
+
+  <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+  <script src="https://cdn.datatables.net/buttons/2.2.3/js/dataTables.buttons.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+  <script src="https://cdn.datatables.net/buttons/2.2.3/js/buttons.html5.min.js"></script>
+  <script src="https://cdn.datatables.net/buttons/2.2.3/js/buttons.print.min.js"></script>
+
+  <script src="/static/javascripts/datatable.js"></script>
   <script>
-  function confirmDelete(proId) {
-    Swal.fire({
+    function confirmDelete(proId) {
+      Swal.fire({
         title: 'Are you sure?',
         text: "You won't be able to revert this!",
         icon: 'warning',
@@ -99,65 +78,65 @@
         confirmButtonColor: '#3085d6',
         cancelButtonColor: '#d33',
         confirmButtonText: 'Yes, cancel it!'
-    }).then((result) => {
+      }).then((result) => {
         if (result.isConfirmed) {
-            Swal.fire(
-                'Order Canceled!',
-                'Your order has been canceled.',
-                'success'
-            ).then(() => {
-                location.href = `/cancel-order/${proId}`
-            })
+          Swal.fire(
+            'Order Canceled!',
+            'Your order has been canceled.',
+            'success'
+          ).then(() => {
+            location.href = `/cancel-order/${proId}`
+          })
         }
-    })
-  }
-  
-  function viewdetail(id) {
-    let hello = document.getElementById('hello')
-            hello.innerHTML = ''
-    $.ajax({
-        url:`/product/${id}`,
-        method:'get',
-        success:(response)=>{
-            console.log(response);
-            for (let i = 0; i < response.length; i++) {
-                        hello.innerHTML += ` <h5>${response[i].name}</h5>
+      })
+    }
+
+    function viewdetail(id) {
+      let hello = document.getElementById('hello')
+      hello.innerHTML = ''
+      $.ajax({
+        url: `/product/${id}`,
+        method: 'get',
+        success: (response) => {
+          console.log(response);
+          for (let i = 0; i < response.length; i++) {
+            hello.innerHTML += ` <h5>${response[i].name}</h5>
                         <img src="/static/product-image/${response[i].image}.jpg" alt="" style="width: 100px;height: 75px;">
                         <h6 class="text-danger">Price: ${response[i].original}</h6>
                         <h6 class="text-success">Discount Price: ${response[i].purchase}</h6>
                         <p>Category: ${response[i].category}</p>
-                        <p>paymentMethod: ${response[i].paymentMethod}</p>
-                        <p>address: ${response[i].town} ${response[i].state} ${response[i].pincode}</p>
+                        <p>Ordered Date: ${new Date(response[i].date).toDateString()}</p> 
+                        <p>PaymentMethod: ${response[i].paymentMethod}</p>
+                        <p>Delivered Address: ${response[i].town} ${response[i].state} ${response[i].pincode}</p>
                         <hr>
                         `
-                    }
+          }
         }
+      })
+
+    }
+
+    var exampleModal = document.getElementById('exampleModal')
+    exampleModal.addEventListener('show.bs.modal', function (event) {
+      // Button that triggered the modal
+      var button = event.relatedTarget
+      // Extract info from data-bs-* attributes
+      var recipient = button.getAttribute('data-bs-whatever')
+      // If necessary, you could initiate an AJAX request here
+      // and then do the updating in a callback.
+      //
+      // Update the modal's content.
+      var modalTitle = exampleModal.querySelector('.modal-title')
+      var modalBodyInput = exampleModal.querySelector('.modal-body input')
+
+      modalTitle.textContent = 'New message to ' + recipient
+      modalBodyInput.value = recipient
     })
-    
-  }
+  </script>
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-  var exampleModal = document.getElementById('exampleModal')
-exampleModal.addEventListener('show.bs.modal', function (event) {
-  // Button that triggered the modal
-  var button = event.relatedTarget
-  // Extract info from data-bs-* attributes
-  var recipient = button.getAttribute('data-bs-whatever')
-  // If necessary, you could initiate an AJAX request here
-  // and then do the updating in a callback.
-  //
-  // Update the modal's content.
-  var modalTitle = exampleModal.querySelector('.modal-title')
-  var modalBodyInput = exampleModal.querySelector('.modal-body input')
 
-  modalTitle.textContent = 'New message to ' + recipient
-  modalBodyInput.value = recipient
-})
-</script>
-<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
- 
 
 
 
   <%-include('footer')-%>
-
