--- a/Project/public/stylesheets/main.css
+++ b/Project/public/stylesheets/main.css
@@ -13,19 +13,19 @@ body{
 .bg-primary{
     background-color: var(--pink)!important;
 }
-
-.btn:not(.nav-btns button){
-    background-color: #fff;
-    color: rgb(85, 85, 85);
-    padding: 10px 28px;
-    border-radius: 25px;
-    border: 1px solid rgb(85, 85, 85);
-}
-.btn:not(.nav-btns button):hover{
+/* 
+    .btn:not(.nav-btns button){
+        background-color: #fff;
+        color: rgb(85, 85, 85);
+        padding: 10px 28px;
+        border-radius: 25px;
+        border: 1px solid rgb(85, 85, 85);
+    } */
+/* .btn:not(.nav-btns button):hover{
     background-color: var(--pink);
     color: #fff;
     border-color: var(--pink);
-}
+} */
 
 /* text color */
 .text-primary{
