--- a/Project/views/admin/adProductManage.ejs
+++ b/Project/views/admin/adProductManage.ejs
@@ -18,10 +18,10 @@
                                 <tr>
                                     <th scope="col" width="50">#</th>
                                     <th scope="col">Name</th>
-                                    <th scope="col">Description</th>
                                     <th scope="col">Category</th>
                                     <th scope="col">Price</th>
                                     <th scope="col">Images</th>
+                                    <th scope="col">Option</th>
                                     <th scope="col">Option</th>
                                     <th scope="col">Option</th>
                                 </tr>
@@ -35,9 +35,7 @@
                                         <td>
                                             <%=element.name%>
                                         </td>
-                                        <td>
-                                            <%=element.description%>
-                                        </td>
+                                        
                                         <td>
                                             <%=element.category%>
                                         </td>
@@ -54,6 +52,29 @@
                                                 <%}%>
                                                 <td><a href="/admin/edit-product/<%=element._id%>"
                                                 class="btn btn-secondary float-left">Edit Product</a></td>
+                                                <td>
+                                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="viewdescription(`<%=element._id%>`)">View Details</button>
+                                                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                                                    aria-hidden="true">
+                                                    <div class="modal-dialog">
+                                                      <div class="modal-content">
+                                                        <div class="modal-header">
+                                                          <h5 class="modal-title" id="exampleModalLabel"> VIEW DETAILS</h5>
+                                                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                        </div>
+                                                        <div class="modal-body">
+                                                          <div id="hellomr">
+                                                            
+                                        
+                                                          </div>
+                                                        </div>
+                                                        <div class="modal-footer">
+                                                          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                                        </div>
+                                                      </div>
+                                                    </div>
+                                                  </div>
+                                                </td>
                                     </tr>
                                     <%})%>
                             </tbody>
@@ -85,7 +106,7 @@
     <!-- /#page-content-wrapper -->
     </div>
 
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         var el = document.getElementById("wrapper");
         var toggleButton = document.getElementById("menu-toggle");
@@ -116,6 +137,18 @@
                     })
                 }
             })
+        }
+
+        function viewdescription(id) {
+            let a = document.getElementById('hellomr')
+            a.innerHTML = ''
+            $.ajax({
+                url:`/admin/viewProductDetail/${id}`,
+                method:'get',
+                success:(res)=>{
+                    a.innerHTML += `<p class:'text-dark'>Description:${res.description}</p>`
+                }
+            }) 
         }
     </script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
