--- a/Project/views/partials/navUser.ejs
+++ b/Project/views/partials/navUser.ejs
@@ -1,51 +1,22 @@
- <!-- navbar -->
- <nav class="navbar navbar-expand-lg navbar-light bg-white py-4 fixed-top">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+<!-- navbar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-white py-4 fixed-top">
     <div class="container">
         <a class="navbar-brand d-flex justify-content-between align-items-center order-lg-0" href="/">
             <span class="text-uppercase fw-lighter ms-2">GOCYCLE</span>
         </a>
 
-        <div class="order-lg-2 nav-btns">
-            <button type="button" class="btn position-relative">
-                <a href="/cart" class="fa fa-shopping-cart"></a>
-                <span class="position-absolute top-0 start-100 translate-middle badge bg-primary"></span>
-                <span class="badge badge-light" >
-                    <%=cartCount%>
-                </span>
-            </button>
-            <button type="button" class="btn position-relative">
-                <a href="/wishlist" class="fa fa-heart"></a>
-                <span class="position-absolute top-0 start-100 translate-middle badge bg-primary"></span>
-                <span class="badge badge-light" id="wishlist"></span>
-            </button>
-            
-            <button type="button" class="btn position-relative">
-                <a href="/profile" class="fa-solid fa-user"></a>
-            </button>
-
-            <%if (token) { %>
-                <a href="logout" class="btn btn-primary mt-3 ms-2 ">
-                    Logout
-                </a>
-                <% }else{ %>
-                    <a href="login" class="btn btn-primary mt-3 ms-2 ">
-                        Login
-                    </a>
-                    <%}%>
-
-        </div>
-
         <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon">...</span>
         </button>
 
         <div class="collapse navbar-collapse order-lg-1" id="navMenu">
-            <ul class="navbar-nav mx-auto text-center">
+            <ul class="navbar-nav mx-auto text-center ">
                 <li class="nav-item px-2 py-2">
                     <a class="nav-link text-uppercase text-dark" href="/">home</a>
                 </li>
                 <li class="nav-item px-2 py-2">
-                    <!-- <a class = "nav-link text-uppercase text-dark" href = "#collection">collection</a> -->
                     <div class="dropdown ">
                         <a class="dropbtn nav-link text-uppercase text-dark">Category</a>
                         <div class="dropdown-content">
@@ -60,7 +31,25 @@
                 </li>
                 <li class="nav-item px-2 py-2">
                     <a class="nav-link text-uppercase text-dark" href="#special">specials</a>
-                </li>
+                </li  >
+                    <a href="/cart" class=" btn btn-primary mt-3 ms-2 ">cart</a>
+                    <!-- <span class="badge badge-light">
+                        <%=cartCount%>
+                    </span> -->
+             
+                 <a href="/wishlist" class="fa fa-heart  btn btn-primary mt-3 ms-2"></a>
+
+
+                <a href="/profile" class="fa-solid fa-user btn btn-primary mt-3 ms-2 "></a>
+                <%if (token) { %>
+                    <a href="logout" class="btn btn-primary mt-3 ms-2 ">
+                        Logout
+                    </a>
+                    <% }else{ %>
+                        <a href="login" class="btn btn-primary mt-3 ms-2 ">
+                            Login
+                        </a>
+                        <%}%>
             </ul>
         </div>
     </div>
