--- a/Project/views/user/header.ejs
+++ b/Project/views/user/header.ejs
@@ -15,9 +15,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
     crossorigin="anonymous" />
-  <!-- <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,700,900&display=swap" rel="stylesheet"> -->
-
-  <!-- <script src="https://kit.fontawesome.com/332a215f17.js" crossorigin="anonymous"></script> -->   
   <link rel='stylesheet' href='/static/stylesheets/style.css' />
   <link rel="stylesheet" href="/static/stylesheets/main.css">
   <!-- Font Awesome -->
@@ -33,8 +30,6 @@
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.js"></script>
   <script src="https://unpkg.com/js-image-zoom@0.4.1/js-image-zoom.js" type="application/javascript"></script>
-  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous"> -->
 
   <!-- razorpay cdn -->
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
@@ -43,6 +38,14 @@
   <meta name="google-signin-client_id" content="225477678393-rbc9qhsd171ljc7p9infql54fnpm63os.apps.googleusercontent.com">
   <script src="https://apis.google.com/js/platform.js" async defer></script>
 
+  
+  <!-- datatables -->
+  <link rel="stylesheet" type="text/css"
+      href="http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.4/css/jquery.dataTables.css" />
+  <link rel="stylesheet" href="https://cdn.datatables.net/buttons/2.2.3/css/buttons.dataTables.min.css">
+  
+ 
+     
 </head>
 
 <body>
