--- a/Project/views/user/login.ejs
+++ b/Project/views/user/login.ejs
@@ -1,4 +1,27 @@
-<%-include('header')-%>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Go Cycle</title>
+
+
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.4.0/mdb.min.css" rel="stylesheet" />
+
+
+  <!-- google sign in -->
+  <meta name="google-signin-client_id" content="225477678393-rbc9qhsd171ljc7p9infql54fnpm63os.apps.googleusercontent.com">
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+
+</head>
+
+<body>
 
   <!-- Section: Design Block -->
   <section class="background-radial-gradient overflow-hidden">
